# containers

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Manifest.toml  Project.toml  README.md  build.sh  clone-spt3g.sh  docker-compose.yml  julia3g.Dockerfile  julia_atom_template.sh  juliabase.Dockerfile  juliapython.Dockerfile  push.sh  pythonbase.Dockerfile  singularity.sh  zellij-config.kdl
archive/sp_validation/: .gitignore  Dockerfile  LICENCE.txt  README.md  pyproject.toml
archive/sp_validation/.github/workflows/: cd-build.yml  ci-build.yml  deploy-image.yml
archive/sp_validation/config/calibration/: mask_v1.5.5.yaml  mask_v1.X.2.yaml  mask_v1.X.3.yaml  mask_v1.X.4.yaml  mask_v1.X.6.yaml
archive/sp_validation/cosmo_inference/: .gitignore  README.md  cfis_pipeline.sh  pipeline.sh
archive/sp_validation/cosmo_inference/cosmocov_config/: cosmocov.ini
archive/sp_validation/cosmo_inference/cosmosis_config/: cosmosis_pipeline_A.ini  cosmosis_pipeline_A_ia.ini  cosmosis_pipeline_A_psf.ini  priors.ini  priors_psf.ini  values.ini  values_ia.ini  values_psf.ini  values_template.ini
archive/sp_validation/cosmo_inference/notebooks/: cfis_analysis.ipynb  cfis_mcmc.ipynb
archive/sp_validation/cosmo_inference/scripts/: 2pt_like_xi_sys.py  cosmocov_process.py  cosmosis_fitting.py  matching.py  nz_writeout.py  slurm.sh  treecorr_calc.py  xi_sys_psf.py
archive/sp_validation/defunct/: TD_WL_cycle2_2021.ipynb  defunct.py  validation_local_cal.ipynb
archive/sp_validation/docs/source/: Leakage_object_Tutorial.md  conf.py  contributing.rst  installation.rst  post_processing.md  quickstart.rst  run_validation.md  toc.rst
archive/sp_validation/glass_mock/: make_unions_glass_sim.py  validate_glass_mock.ipynb
archive/sp_validation/notebooks/: analyse_matched_stars_UNIONS_HSC.ipynb  calibrate_comprehensive_cat.py  config_mask.yaml  correlation.ipynb  cosmology.ipynb  demo_add_bands.py  demo_calibrate_minimal_cat.py  demo_check_footprint.py  demo_comprehensive_to_minimal_cat.py  demo_create_footprint_mask.py  extract_info.py  frac_error_local_calib.ipynb  leakage_minimal.py  main_set_up.ipynb  maps.ipynb  maps_local.ipynb  mask_fits2hsparse.py  match_stats.ipynb  metacal_global.ipynb  metacal_local.ipynb  misc.ipybn  params.py  plot_binned_quantities.py  plot_footprints.py  psf_leakage.ipynb  tests_bump.py  write_cat.ipynb
archive/sp_validation/notebooks/analyse_shear_cat/: m2_SP_LF_alpha.ipynb  tutorial_UNIONS_SP_v1.0.ipynb
archive/sp_validation/notebooks/cosmo_val/: cat_config.yaml  compute_theory_cov.py  match_LF_SP.py  run_cosmo_val.py
archive/sp_validation/notebooks/examples/: des_y3_cat.py
archive/sp_validation/notebooks/tests/: star_response.py
archive/sp_validation/scripts/: apply_alpha.py  apply_alpha_snr_size_bin.py  apply_hsp_masks.py  check_tile_IDs_SP_LF.py  combine_hp_masks.py  combine_results.py  compute_area.py  create_joint_comprehensive_cat.py  create_joint_shape_cat.py  healsparse_masking.py  homogenize_cat_extended.py  map2.py  plot_gal_random.py  plot_leakage.py  plot_rand.py  plot_rho_stats_patches.py  prepare_patch_for_spval.sh  star_match_stats.py  stats_tile_id_gal_counts.py  survey_stats_all.sh  xip_xim.py
archive/sp_validation/src/sp_validation/: __init__.py  b_modes.py  basic.py  calibration.py  cat.py  cosmo_val.py  cosmology.py  galaxy.py  info.py  io.py  plot_style.py  plots.py  rho_tau.py  run_joint_cat.py  survey.py  util.py  version.py
spt3g_software/frbutils/: CMakeLists.txt
spt3g_software/frbutils/include/frbutils/: frbfiltering.h  frbutils.h
spt3g_software/frbutils/old_scripts/: MakefileInjectPath.include  MakefileRunPath.include  collate.py  do_magic_filtering.py  flag_possible_events.py  generate_full_stats.py  loadfakeframe.py  make_other_thresholds.py  meta_analysis.py  sptpol_idf_to_possible_events.py
spt3g_software/frbutils/python/: __init__.py  combine_data.py  frbanalysis.py  frbbackgrounds.py  frbfiltering.py  frbhunting.py  frbmontecarlo.py  impulseinjections.py  montecarlo.py  mpiutils.py  spectralindexconstraints.py
spt3g_software/frbutils/src/: frbfiltering.cpp  frbutils.cpp  python.cpp
spt3g_software/frbutils/tests/: testsigest.py
spt3g_software/mapmaker/: CMakeLists.txt
spt3g_software/mapmaker/include/mapmaker/: aberrationmodules.h  aberrationutils.h  (+6 more)
spt3g_software/mapmaker/python/: __init__.py  aberrationmodules.py  mapmakerutils.py  pointsourceutils.py  testutils.py
spt3g_software/mapmaker/src/: aberrationmodules.cpp  aberrationutils.cpp  detectormodules.cpp  mappingmodules.cpp  mappingutils.cpp  pointingutils.cpp  polarizationutils.cpp  python.cpp  todmapconverters.cpp
spt3g_software/mapmaker/tests/: annoying_error.py  make_pointing_test_cases.py  map_picture.py  pointing_test_fixture.py
spt3g_software/mapspectra/: CMakeLists.txt  README.rst
spt3g_software/mapspectra/python/: __init__.py  apodmask.py  basicmaputils.py  beams.py  coupling_kernel.py  fancyestimators.py  map_analysis.py  map_spectrum_classes.py  pixel_window.py
spt3g_software/mapspectra/src/: apodmask.cpp  bispec_est.cpp  inpaint_quick.cpp  python.cpp
spt3g_software/mapspectra/tests/: test_inpaint.py  test_powerspectrum.py
spt3g_software/mapspectra/unit_tests/: test_bispec_funcs.c
spt3g_software/todfilter/: CMakeLists.txt
spt3g_software/todfilter/python/: __init__.py  convolve_filter.py  dftutils.py  downsampler.py  notchfilter.py  polyutils.py  timeconstant_filter.py  timestream_psd_modules.py  util.py
spt3g_software/todfilter/src/: fftutils.cpp  filtermodules.cpp  numericutils.cpp  polyutils.cpp  python.cpp
spt3g_software/todfilter/tests/: convolve_filter_test.py  downsampler_test.py  filter_test_fixture.py  filtertest.cpp  test_psd_norm.py  timeconstant_filter_test.py
spt3g_software/util/: CMakeLists.txt  README.rst
spt3g_software/util/python/: __init__.py  extractdata.py  files.py  fitting.py  framecombiner.py  g3curses.py  genericutils.py  healpix_tools.py  maths.py  stats.py  timestream_psd.py
spt3g_software/util/src/: hdfutils.cpp  python.cpp
spt3g_software/util/tests/: util_test_fixture.py
(+1077 files in other folders)
