[project]
name = "sp_validation"
version = "0.5.0"
description = "Validation of weak-lensing catalogues (galaxy and star shapes and other parameters) produced by ShapePipe"
authors = [
    {name = "Martin Kilbinger", email = "martin.kilbinger@cea.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6,<3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "adjustText",
    "astropy>=5.0",
    "camb",
    "clmm",
    "colorama",
    "cosmo-numba @ git+https://github.com/aguinot/cosmo-numba",
    "cs_util>=0.1.5",
    "emcee",
    "getdist @ git+https://github.com/benabed/getdist.git@upper_triangle_whisker",
    "h5py",
    "healpy",
    "healsparse",
    "importlib_metadata",
    "joblib>=0.13",
    "jupyter",
    "jupyterlab",
    "jupytext==1.15.1",
    "lenspack",
    "lmfit",
    "numexpr",
    "numpy>=1.14",
    "opencv-python-headless",
    "pyccl",
    "pyarrow",
    "pymaster",
    "regions",
    "reproject",
    "scipy",
    "seaborn",
    "skyproj",
    "shear_psf_leakage @ git+https://github.com/CosmoStat/shear_psf_leakage.git@develop",
    "statsmodels",
    "treecorr>=5.0",
    "tqdm",
    "uncertainties"
]

[project.urls]
Homepage = "https://github.com/CosmoStat/sp_validation"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-pydocstyle",
    "ruff"
]
docs = [
    "jupyter==1.0.0",
    "myst-parser==0.16.1",
    "nbsphinx==0.8.7",
    "nbsphinx-link==1.3.0",
    "numpydoc==1.1.0",
    "sphinx==4.3.1",
    "sphinxcontrib-bibtex==2.4.1",
    "sphinxawesome-theme==3.2.1"
]
develop = ["sp_validation[test,docs]"]

[tool.pytest.ini_options]
testpaths = ["sp_validation"]
addopts = [
    "--verbose",
    "--pydocstyle",
    "--cov=sp_validation",
    "--cov-report=term",
    "--cov-report=xml",
    "--junitxml=pytest.xml"
]
markers = [
    "fast: marks tests as fast (deselect with '-m \"not fast\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E712",  # comparison to True should be 'if cond is True:' or 'if cond:'
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D105", "D107"]
